--- a/setup.cfg
+++ b/setup.cfg
@@ -2,4 +2,5 @@
 # 1. Отключил ограничение на длину строки (E501)
 # 2. Отключил требования докстрингов (D103, DAR201)
 # 3. Отключил ограничение на количество локальныйх переменных в функции (WPS210)
-extend-ignore = E501, D103, DAR201, WPS210
+# 4. Отключил запрет на использование в имени числа, отделённого от букв нижними подчёркиваниями (WPS114)
+extend-ignore = E501, D103, DAR201, WPS210, WPS114
