--- a/setup.cfg
+++ b/setup.cfg
@@ -3,4 +3,5 @@
 # 2. Отключил требования докстрингов (D103, DAR201)
 # 3. Отключил ограничение на количество локальныйх переменных в функции (WPS210)
 # 4. Отключил запрет на использование в имени числа, отделённого от букв нижними подчёркиваниями (WPS114)
-extend-ignore = E501, D103, DAR201, WPS210, WPS114
+# 5. Отключил проверку на сложность по Джонсу, чтобы была возможность сортировать по двум параметрам в втором задании (WPS221)
+extend-ignore = E501, D103, DAR201, WPS210, WPS114, WPS221
